--- a/heatmap.html
+++ b/heatmap.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<script src="../lib/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <style>
 
 text {
